# gnome-software

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  Makefile.am  NEWS  README  README.md  RELEASE  RELEASE.md  TODO  autogen.sh  configure  configure.ac  glib-tap.mk  gnome-software.doap  issues  meson.build  meson_options.txt  meson_post_install.sh
data/: Makefile.am  featured.ini  featured.ini.in  gnome-software.appdata.xml  gnome-software.appdata.xml.in  gtk-style.css  meson.build  moduleset-core.xml  moduleset-gnome-apps.xml  org.gnome.Software-categories.xml  org.gnome.Software-featured.xml  org.gnome.Software-popular.xml  org.gnome.Software.desktop  org.gnome.software.dkms-helper.policy.in.in  org.gnome.software.external-appstream.policy.in  org.gnome.software.external-appstream.policy.in.in  org.gnome.software.gschema.xml  popular-apps.xml
data/appdata/: Makefile.am  gnome-software.appdata.xml.in  meson.build  org.gnome.Software.appdata.xml.in  resize-window.sh
data/assets/: meson.build  org.gnome.Software.Curated.xml  org.gnome.Software.Featured.brokenExport.xml  org.gnome.Software.Featured.xml  org.gnome.Software.Popular.xml
data/autostart/: org.gnome.Software.desktop.in
data/bash-completion/: gnome-software
data/icons/: Makefile.am  meson.build
data/metainfo/: meson.build  org.gnome.Software.metainfo.xml.in
data/modulesets/: Makefile.am  base.xml  core.xml  default.xml  featured.xml  gnome.xml  popular.xml  system.xml
data/tests/: Makefile.am  build-deb.sh  build-rpm.sh  chiron-0.2.cab  chiron-1.1-1.fc24.x86_64.rpm  example.flatpakrepo  firmware.dfu  firmware.dfu.asc  firmware.metainfo.xml  os-release
gs-install-appstream/: gs-install-appstream.c  meson.build
help/: LINGUAS  meson.build
help/C/: how-to-reinstall-a-web-app.page  index.page  legal.xml  software-licensing.page  software-metadata.page
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/eu/: eu.po
help/fr/: fr.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/kk/: kk.po
help/nl/: nl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sk/: sk.po
help/sr/: sr.po
help/sv/: sv.po
help/uk/: uk.po
lib/: Makefile.am  README.md  gnome-software-private.h  gnome-software.h  gnome-software.pc.in  gs-app-collation.h  gs-app-list-private.h  gs-app-list.c  gs-app-list.h  gs-app-permissions.c  gs-app-permissions.h  gs-app-private.h  gs-app-query.c  gs-app-query.h  gs-app.c  gs-app.h  gs-appstream.c  gs-appstream.h  gs-auth.c  gs-auth.h  gs-autocleanups.h  gs-build-ident.h.in  gs-category-manager.c  gs-category-manager.h  gs-category-private.h  gs-category.c  gs-category.h  gs-channel.c  gs-channel.h  gs-cmd.c  gs-css.h  gs-debug.c  gs-debug.h  gs-desktop-data.c  gs-desktop-data.h  gs-dkms-private.c  gs-dkms-private.h  gs-download-utils.c  gs-download-utils.h  gs-external-appstream-utils.c  (+106 more)
lib/tests/: app-permissions.c  css.c  general.c  meson.build  utils.c
lib/tools/: meson.build  profile-key-colors.c
plugins/: Makefile.am  gs-appstream.c  gs-appstream.h  gs-flatpak.h  gs-markdown.c  gs-plugin-generic-updates.c  gs-plugin-icons.c  gs-plugin-limba.c  gs-plugin-modalias.c  gs-plugin-packagekit-origin.c  gs-plugin-packagekit-refresh.c  gs-plugin-steam.c  gs-plugin-systemd-updates.c  gs-plugin-ubuntuone.c  gs-self-test.c  gs-snapd.c  gs-snapd.h  meson.build  org.gnome.Software.Plugin.Steam.metainfo.xml.in
plugins/core/: Makefile.am  gs-appstream.c  gs-appstream.h  gs-desktop-common.c  gs-desktop-common.h  gs-plugin-appstream.c  gs-plugin-appstream.h  gs-plugin-desktop-categories.c  gs-plugin-desktop-menu-path.c  gs-plugin-fedora-langpacks.c  gs-plugin-generic-updates.c  gs-plugin-generic-updates.h  gs-plugin-hardcoded-blacklist.c  gs-plugin-hardcoded-blocklist.c  gs-plugin-hardcoded-blocklist.h  gs-plugin-hardcoded-featured.c  gs-plugin-hardcoded-popular.c  gs-plugin-hardcoded-popular.h  gs-plugin-icons.c  gs-plugin-icons.h  gs-plugin-key-colors-metadata.c  gs-plugin-key-colors.c  gs-plugin-langpacks.c  gs-plugin-os-release.c  gs-plugin-os-release.h  gs-plugin-provenance-license.c  gs-plugin-provenance-license.h  gs-plugin-provenance.c  gs-plugin-provenance.h  gs-plugin-rewrite-resource.c  gs-plugin-rewrite-resource.h  gs-self-test.c  meson.build
plugins/dkms/: gs-dkms-helper.c  gs-plugin-dkms.c  gs-plugin-dkms.h  meson.build
plugins/dpkg/: Makefile.am  gs-plugin-dpkg.c  gs-plugin-dpkg.h  gs-self-test.c  meson.build
plugins/dummy/: Makefile.am  gs-plugin-dummy.c  gs-plugin-dummy.h  gs-self-test.c  meson.build
plugins/eos-updater/: com.endlessm.Updater.xml  gs-plugin-eos-updater.c  gs-plugin-eos-updater.h  meson.build
plugins/epiphany/: Makefile.am  gs-plugin-epiphany.c  gs-plugin-epiphany.h  gs-self-test.c  meson.build  org.gnome.Software.Plugin.Epiphany.metainfo.xml.in
plugins/external-appstream/: Makefile.am  gs-external-appstream-utils.c  gs-external-appstream-utils.h  gs-install-appstream.c  gs-plugin-external-appstream.c  meson.build
plugins/fedora-langpacks/: meson.build  (+3 more)
src/: Makefile.am  app-folder-dialog.ui  app-menu.ui  app-tile.ui  app-widget.ui  category-tile.ui  ch-markdown.c  ch-markdown.h  core-apps.txt  egg-list-box.c  egg-list-box.h  feature-tile.ui  gd-notification.c  gnome-software-editor.gresource.xml  gnome-software-editor.xml  gnome-software-local-file-flatpak.desktop.in  gnome-software-local-file-fwupd.desktop.in  gnome-software-local-file-metainfo.desktop.in  gnome-software-local-file-packagekit.desktop.in  gnome-software-local-file-snap.desktop.in  gnome-software-local-file.desktop.in  gnome-software-search-provider.ini  gnome-software-service.desktop.in  gnome-software.desktop.in  gnome-software.gresource.xml  gnome-software.h  gnome-software.pc.in  gnome-software.service.in  gnome-software.sgml  gnome-software.ui  gnome-software.xml  gs-age-rating-context-dialog.c  gs-age-rating-context-dialog.h  gs-age-rating-context-dialog.ui  gs-app-addon-row.c  gs-app-addon-row.h  gs-app-addon-row.ui  gs-app-context-bar.c  gs-app-context-bar.h  gs-app-context-bar.ui  (+341 more)
(+474 files in other folders)
